--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 #// Production global environment files
 
-VUE_APP_SERVER_URL=localhost
-VUE_APP_SERVER_PORT=1010
+VUE_APP_SERVER_URL=pca.fabledeck.com
+VUE_APP_SERVER_PORT=
