add settings btt, rework images

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 
 VUE_APP_SERVER_URL=localhost
 VUE_APP_SERVER_PORT=:8443
+
+VUE_APP_GCP_CARD_IMG_BUCKET=https://storage.googleapis.com/fd-cards-images
