--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,5 @@
 
 VUE_APP_SERVER_URL=pca.fabledeck.com
 VUE_APP_SERVER_PORT=
+
+VUE_APP_GCP_CARD_IMG_BUCKET=https://storage.googleapis.com/fd-cards-images
